# Ink-in-Space

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml  rustfmt.toml
Unity/Assets/Scenes/: Main.unity
Unity/Assets/Stylus/Materials/: BlueInkSprite.mat
Unity/Assets/Stylus/Prefabs/: LineDrawing.prefab  MX_Ink.prefab
Unity/Assets/Stylus/Scripts/: MxInkHandler.cs
Unity/Assets/XR/Settings/: OpenXR Package Settings.asset
Unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
src/: lib.rs  main.rs  trajectory.rs
